[tool.poetry]
name = "file-storage"
version = "0.1.0"
description = "File Storage Service with HPPT Api"
authors = ["Yaroslav Smirnov <ysmirnov@jetlend.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.1"
flask-httpauth = "^4.7.0"
werkzeug = "^3.1.3"
flask-sqlalchemy = '3.1.1'
bcrypt = "^4.0.1"
python-dotenv = "^1.1.0"
gunicorn = "^23.0.0"
flask-limiter = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
